# AeroDesign-Live-Streaming-System

./: .gitignore  OBS_SETUP.md  QUICKSTART.md  README.md  REAL_TEAMS.md  VISUAL_GUIDE.md  dev.sh  pyproject.toml  start.py  update_photos.py
backend/: main.py  mock_data.json
control-panel/: index.html
control-panel/components/: control-buttons.js  notification-toast.js  status-indicator.js  team-card.js
examples/: README.md  api_usage.py
overlay/: index.html
overlay/assets/: example-obs-scene-config.json
overlay/components/: custom-message.js  flight-results.js  team-info-card.js
shared/components/: api-service.js  base-component.js
